--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,4 @@ layout: default
 ---
 {{ content }}
 
-<ul>
-    {% for post in site.posts %}
-    <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-    {% endfor %}
-</ul>
+*crickets*
