--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,7 @@ layout: default
     {% for post in site.posts %}
     <div>
         <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <div>{{ post.date | date: '%B %d, %Y'}}</div>
         <p>{{ post.excerpt }}</p>
         <p><a href="{{ post.url }}">Read more...</a></p>
     </div>
